@@ -15,8 +15,8 @@ export(seqPal3)
 export(seqPal4)
 export(seqPal5)
 export(setBreaks)
-export(showBigPalette)
 export(showHeatmapPalettes)
+export(showPalette)
 exportClasses(ClusterExperiment)
 exportClasses(ClusterFunction)
 exportMethods("[")
@@ -63,6 +63,7 @@ exportMethods(nSamples)
 exportMethods(nodeMergeInfo)
 exportMethods(orderSamples)
 exportMethods(plotBarplot)
+exportMethods(plotClusterLegend)
 exportMethods(plotClusters)
 exportMethods(plotClustersWorkflow)
 exportMethods(plotCoClustering)
