@@ -4,14 +4,18 @@
 \name{makeDendrogram}
 \alias{makeDendrogram}
 \alias{makeDendrogram,ClusterExperiment-method}
+\alias{makeDendrogram,dist-method}
 \alias{makeDendrogram,matrix-method}
 \title{Make hierarchy of set of clusters}
 \usage{
 \S4method{makeDendrogram}{ClusterExperiment}(x,
   whichCluster = "primaryCluster", dimReduce = c("mad", "cv", "var", "PCA",
-  "none"), ndims = if (dimReduce \%in\% c("mad", "cv", "var")) 500 else if
-  (dimReduce == "none") NA else 50, ignoreUnassignedVar = TRUE,
+  "coCluster", "none"), ndims = if (dimReduce \%in\% c("mad", "cv", "var"))
+  500 else if (dimReduce == "none") NA else 50, ignoreUnassignedVar = TRUE,
   unassignedSamples = c("outgroup", "cluster"), ...)
+
+\S4method{makeDendrogram}{dist}(x, cluster, unassignedSamples = c("outgroup",
+  "cluster", "remove"), ...)
 
 \S4method{makeDendrogram}{matrix}(x, cluster,
   unassignedSamples = c("outgroup", "cluster", "remove"), ...)
@@ -27,7 +31,8 @@ primaryCluster.}
 \item{dimReduce}{character A character identifying what type of 
 dimensionality reduction to perform before clustering. Options are 
 "none","PCA", "var","cv", and "mad". See \code{\link{transform}} for more 
-details.}
+details. The option "coCluster" will use the co-Clustering matrix stored 
+in the 'coClustering' slot of the \code{clusterExperiment} object.}
 
 \item{ndims}{integer An integer identifying how many dimensions to reduce to 
 in the reduction specified by \code{dimReduce}}
