@@ -1,5 +1,12 @@
 Changes in version 1.3.8-9001 ( Release date: )
 ==============
+Changes:
+* makeDendrogram now allows option 'coCluster' to the argument `dimReduce` indicating use of the coClustering matrix to build the dendrogram.
+* makeDendrogram now has a method for building a dendrogram from an arbitrary distance function
+* `showBigPalette` has been replaced with `showPalette` and now can show any palette of colors.
+* The colors in `bigPalette` have been changed and shuffled to reduce similar colors.
+* `clusterMatrix` function now returns cluster matrix with rownames corresponding to sample names.
+
 Bugs:
 * Fixed so `diss` now passed to subsampling in calls to clusterSingle/clusterMany
 
